# zkp-auth

./: Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  TODO.md  build.rs  docker-compose.yml  zkp-auth.proto  zkp_auth.proto
src/: client.rs  crypto.rs  lib.rs  server.rs
