[package]
name = "zkp-auth"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
uuid = { version = "1.1.2", features = [ "v4" ] }

[build-dependencies]
tonic-build = "0.7.2"
