[package]
name = "zkp-auth"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
num-traits = { version = "0.2.15", default-features = false }
num-integer = "0.1.45"
num-bigint = { version = "0.4.3", features = ["rand"] }

[build-dependencies]
tonic-build = "0.7.2"
